# rosalind

./: README.md
fs/: codon.fsx  fasta.fsx  lib.fsx  protein.fsx
fs/Calculating Expected Offspring/: iev.fsx
fs/Calculating Protein Mass/: prtm.fsx
fs/Complementing a Strand of DNA/: comp.fsx
fs/Computing GC Content/: content.fs  content.fsx
fs/Consensus and Profile/: cons.fsx
fs/Counting DNA Nucleotides/: dna.fsx
fs/Counting Point Mutations/: mut.fsx
fs/Enumerating Gene Orders/: perm.fsx
fs/Finding a Motif in DNA/: subs.fsx
fs/Finding a Protein Motif/: mprt.fsx
fs/Finding a Shared Motif/: lcsm.fsx  suffixTrie.fsx
fs/Independent Alleles/: lia.fsx
fs/Inferring mRNA from Protein/: mrna.fsx
fs/Locating Restriction Sites/: revp.fsx
fs/Mendel's First Law/: mendel.fsx
fs/Mortal Fibonacci Rabbits/: fibd.fsx
fs/Open Reading Frames/: orf.fsx
fs/Overlap Graphs/: grph.fsx
fs/RNA Splicing/: splc.fsx
fs/Rabbits and Recurrence Relations/: rabbits.fsx
fs/Transcribing DNA into RNA/: trans.fsx
fs/Translating RNA into Protein/: prot.fsx
haskell/Calculating Expected Offspring/: iev.hs
haskell/Calculating Protein Mass/: prtm.hs
haskell/Complementing a Strand of DNA/: comp.hs
haskell/Computing GC Content/: content.hs
haskell/Consensus and Profile/: cons.hs
haskell/rosalindutils/: rosalindutils.cabal  stack.yaml
haskell/rosalindutils/src/: RosalindUtils.hs
haskell/rosalindutils/src/RosalindUtils/: Codon.hs  Dna.hs  Fasta.hs  Protein.hs  Rna.hs  Types.hs
haskell/rosalindutils/test/Specs/: FastaSpec.hs  TestSpec.hs  TypesSpec.hs
(+22 files in other folders)
